# cf-rubric-api

./: db.sqlite3  manage.py  pyproject.toml
cf_rubric_api/: asgi.py  settings.py  urls.py  wsgi.py
grading_app/: models.py  serializer.py  utility.py
grading_app/migrations/: 0001_initial.py
