[tool.poetry]
name = "cf-rubric-api"
version = "0.1.0"
description = ""
authors = ["ALAN KARLO MANGUBAT <karlomangubat92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.2"
django-environ = "^0.4.5"
djangorestframework = "^3.12.4"
django-cors-headers = "^3.7.0"
psycopg2-binary = "^2.8.6"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
